# rust_os

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
